# ZomboidAssetConverter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build-release.yml  build.yml
src/: CMakeLists.txt  asset.cpp  asset.h  asset.hpp  font.cpp  gui.cpp  gui.h  imconfig.h  main.cpp  main.h  main.hpp  map.cpp  map.hpp  window.cpp  window.h
src/map/: buildingdef.hpp  lotheader.cpp  lotheader.hpp  lotpack.hpp  metaobject.hpp  pzw.cpp  pzw.hpp  roomdef.hpp  roomrect.hpp  tbx.cpp  tbx.hpp
src/map/types/: buildingdef.cpp  buildingdef.hpp  lotheader.cpp  lotheader.hpp  lotpack.cpp  lotpack.hpp  metaobject.hpp  roomdef.hpp  roomrect.hpp
